fixed bubbles not aligning to bottom in safari, also fixed syntax error in 2017.json

--- a/public/stylesheets/brothers/brotherClass.css
+++ b/public/stylesheets/brothers/brotherClass.css
@@ -87,6 +87,7 @@
   padding: 10px;
   cursor: pointer;
   overflow: visible !important;
+  vertical-align: bottom;
 }
 
 .brotherClassContainer #brotherSelector .brotherIcon {
